<?xml version="1.0"?>
<package>
  <name>lms200_package</name>
  <version>1.0.0</version>
  <description>lms200_package is a ROS wrapper for the outstanding <a href="http://www.ros.org/wiki/sicktoolbox">sicktoolbox</a>
    library for interfacing with the SICK LMS2xx lasers.
  </description>

  <maintainer email="lebihanp@hotmail.fr">Pierre Le Bihan</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/naustra/LMS200_ROS</url>
  <url type="bugtracker">https://github.com/naustra/LMS200_ROS/issues</url>
  <url type="repository">https://github.com/naustra/LMS200_ROS</url>

  <author email="lebihanp@hotmail.fr">Pierre Le Bihan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sicktoolbox</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sicktoolbox</run_depend>
  <run_depend>diagnostic_updater</run_depend>

  <export>
  </export>
</package>
